--- a/layouts/partials/index_profile.html
+++ b/layouts/partials/index_profile.html
@@ -21,16 +21,12 @@
                 <div class="card-icon"><img src="{{ "images/offsec.png" | absURL }}" alt="Offsec" class="dash-icon-img"></div>
                 <h3>OffSec</h3><span>Exam & Labs</span>
             </a>
-            <a href="{{ "bug-research/" | absURL }}" class="dash-card bug">
+            <a href="{{ "bugbounty_list/" | absURL }}" class="dash-card bug">
                 <div class="card-icon"><img src="{{ "images/BugBounty.png" | absURL }}" alt="Bug" class="dash-icon-img"></div>
                 <h3>Bug Research</h3><span>CVEs & Findings</span>
             </a>
-            <a href="{{ "misc/" | absURL }}" class="dash-card misc">
-                <div class="card-icon"><img src="{{ "images/tags.png" | absURL }}" alt="Misc" class="dash-icon-img"></div>
-                <h3>Misc / 雜項</h3><span>Tools & Random</span>
-            </a>
             <a href="{{ "tags/" | absURL }}" class="dash-card tags">
-                <div class="card-icon"><img src="{{ "images/tags.png" | absURL }}" alt="Tags" class="dash-icon-img"></div>
+                <div class="card-icon"><img src="{{ "images/tags.svg" | absURL }}" alt="Tags" class="dash-icon-img"></div>
                 <h3>All Tags</h3><span>Browse by Category</span>
             </a>
         </div>
